subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/Typing_Invalid_8.while
{real f} f({int f} x) {
    return x;
}